<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right|end"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:layout_weight="1"
        android:background="@color/purple_200"
        android:gravity="center"
        android:text="@string/tvTitulo"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#31FB8C00"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="382dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvProducto"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginEnd="10dp"
                android:background="@color/purple_200"
                android:padding="5dp"
                android:text="@string/tvProducto"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/ptProducto"
                android:layout_width="254dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/ptProducto"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPrecio"
                android:layout_width="135dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@color/purple_200"
                android:padding="5dp"
                android:text="@string/tvPrecio"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/ptPrecio"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/ptPrecio"
                android:inputType="number|numberDecimal"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCantidad"
                android:layout_width="49dp"
                android:layout_height="44dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/purple_200"
                android:padding="5dp"
                android:text="@string/tvCantidad"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/ptCantidad"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/ptCantidad"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#757575" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnAdd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCompra"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:isScrollContainer="true"
                android:maxHeight="80dp"
                android:overScrollMode="ifContentScrolls"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/teal_200"
                android:padding="10dp"
                android:text="@string/tvTotal"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/tvResultadoTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@color/teal_200"
                android:fadeScrollbars="true"
                android:overScrollMode="always"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbars="vertical"
                android:textSize="24sp"
                android:verticalScrollbarPosition="right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="bottom|end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSalir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnSalir" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>